# fastactor

./: README.md  pyproject.toml
src/: llegos.py
src/fastactor/: otp.py  settings.py  utils.py
src/llegos/: llegos.py
src/tests/: llegos_test.py  test_otp.py
