[project]
name = "llegos"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Cyrus Nouroozi", email = "cyrus@edendaolab.com" }
]
dependencies = [
    "anyio>=4.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.23.0",
    "ipdb>=0.13.13",
    "openai>=1.17.1",
    "pytest>=8.1.1",
    "pytest-anyio>=0.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llegos"]
